--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </li>
     <% else %>
       <li>
-      <%= link_to('Login', new_user_session_path)  %>  
+      <%= link_to('Login', new_user_session_path, :class => "btn btn-sm btn-primary") %>  
       </li>
     <% end %>
   </body>
