--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,9 @@
     <%= yield %>
 
     <% if user_signed_in? %>
-      <li>
       <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-      </li>
     <% else %>
-      <li>
-      <%= link_to('Login', new_user_session_path, :class => "btn btn-sm btn-primary") %>  
-      </li>
+      <%= link_to('Login', new_user_session_path) %>  
     <% end %>
   </body>
 </html>
