--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HomerunPool</title>
+    <title>Home Run Pool</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -11,10 +11,14 @@
   <body>
     <%= yield %>
 
-    <% if user_signed_in? %>
-      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
-    <% else %>
-      <%= link_to('Login', new_user_session_path) %>  
-    <% end %>
+  <div>
+      <div>
+        <% if user_signed_in? %>
+          <%= link_to('Logout', destroy_user_session_path, :method => :delete, :class => "btn btn-sm btn-warning") %>        
+        <% else %>
+          <%= link_to('Login', new_user_session_path, :class => "btn btn-sm btn-warning") %>  
+        <% end %>
+      </div>
+  </div>
   </body>
 </html>
