fix_devise_heroku_errors

--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the players controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+body {
+  font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 500;
+  line-height: 26.4px;
+  background-image: url('pink dust.png');
+  border-style: double;
+  border-width: medium;
+  border-color: #3399ff;
+  margin: 25px;
+  padding: 25px;
+  text-align: center;
+
+}
