--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,8 +22,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", :class => 'btn btn-large btn-primary' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div>
+  <%= render "devise/shared/links" %>
+</div>
