fixed_route_error_player_show

--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -11,12 +11,13 @@ body {
   font-variant: normal;
   font-weight: 500;
   line-height: 26.4px;
-  background-image: url('pink dust.png');
+  // background-image: url('pink dust.png');
   border-style: double;
   border-width: medium;
   border-color: #3399ff;
   margin: 25px;
   padding: 25px;
   text-align: center;
+  color: #000066;
 
 }
