--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -9,7 +9,7 @@ body {
   font-variant: normal;
   font-weight: 500;
   line-height: 26.4px;
-  background-image: url('pink dust.png');
+  // background-image: url('pink dust.png');
   border-style: double;
   border-width: medium;
   border-color: #3399ff;
