--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,4 +1,5 @@
-<h1> <%= current_user.email %>'s Teams <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %></h1>
+<h1> <%= link_to("View Players", "/players/", :class => "btn btn-success") %><%= current_user.email %>'s Teams <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %>
+</h1>
 <hr>
 
 <div>
