--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,9 +7,7 @@
     </div>
     <div class="navbar-right" id="bs-example-navbar-collapse-2">
       <% if user_signed_in? %>
-        <div><%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %></div>
-        <div>Coach: <%= current_user.email %></div>
-    </div>
+        <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %></div>
     <div class="navbar-left">
 
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
