--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,16 +1,16 @@
-<h1> <%= current_user.email %>'s Teams <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %>
+<h1> <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %>
 </h1>
 <hr>
 
 <div>
 
+<%= @players %>
   
   <% @teams.each do |team| %>
     <h2> <%= link_to(team.team_name.titleize, "/team/#{team.id}") %> Total: <%= @team_score %> </h2>
   <% end %>
 </div>
 <hr>
-
 <span class="counter pull-left" ></span>
 <table class="table table-hover results" >
  <thead>
