--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -9,39 +9,49 @@
 <table class="table table-hover results">
  <thead>
    <tr>
-     <th> Name </th>
+     <th> Name / 2017 Home Runs <br>
+     <small>click player for details</small></th>
 <!--      <th> Team </th>
      <th> Total </th> -->
 
    </tr>
  </thead>
-  <tbody>
+  <tbody class="counter pull-left">
     <tr>
-      <td> <%= @team.player_1 %></td>
+      <td> <%= link_to(@team.player_1, "/player/#{Player.find_by(name: @team.player_1).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_1).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_2 %></td>
+      <td> <%= link_to(@team.player_2, "/player/#{Player.find_by(name: @team.player_2).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_2).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_3 %></td>
+      <td> <%= link_to(@team.player_3, "/player/#{Player.find_by(name: @team.player_3).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_3).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_4 %></td>
+      <td> <%= link_to(@team.player_4, "/player/#{Player.find_by(name: @team.player_4).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_4).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_5 %></td>
+      <td> <%= link_to(@team.player_5, "/player/#{Player.find_by(name: @team.player_5).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_5).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_6 %></td>
+      <td> <%= link_to(@team.player_6, "/player/#{Player.find_by(name: @team.player_6).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_6).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_7 %></td>
+      <td> <%= link_to(@team.player_7, "/player/#{Player.find_by(name: @team.player_7).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_7).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_8 %></td>
+      <td> <%= link_to(@team.player_8, "/player/#{Player.find_by(name: @team.player_8).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_8).home_runs_2017 %></td>
     </tr>
     <tr>
-      <td> <%= @team.player_9 %></td>
+      <td> <%= link_to(@team.player_9, "/player/#{Player.find_by(name: @team.player_9).id}") %></td>
+      <td> <%= Player.find_by(name: @team.player_9).home_runs_2017 %></td>
     </tr>
   
   </tbody>
