--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -2,7 +2,7 @@
 <small>Coach: <%= current_user.email %></small>
 <br>
 </h1>
-<h3>Season Total: <%= @team.score %> </h3>
+<h3>Season Total: <%= @team_score %> </h3>
 
 
 <span class="counter pull-left"></span>
