--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,11 @@
 <h2>Sign up</h2>
 
+<div>
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
   <div class=container-fluid>
+  <div>
     <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true %>
@@ -26,8 +29,10 @@
     </div>
   <% end %>
   <div>
+  <div>
     <div>
       <%= render "devise/shared/links" %>
     </div>
   </div>
+</div>
 </div>
