--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <h2>Sign up</h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: new_registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
 
       <div class="field">
@@ -24,7 +24,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", :class => 'btn btn-large btn-primary' %>
+        <%= f.submit "Sign Up", :class => 'btn btn-large btn-primary' %>
       </div>
     <% end %>
 
