some_tweaks_mostly_stlying

--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,6 +1,6 @@
 <table align="center">
   <tr>
-    <h2>Name Your Team and add 9 players.</h2>
+    <h2>Name Your Team and add 9 players. <small><p><b>ERROR ALERT! - Refresh page before entering data or the Sign Up button won't work. I am working on it!</b></p></small></h2>
 
 
     <%= form_for @team, url: {action: "create"} do |f| %>
