--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
-<table align="center">
+<table>
   <tr>
-    <h2>Sign up!</h2>
+    <h2>Sign up! <small><p><b>ERROR ALERT! - Refresh page before entering data or the Sign Up button won't work. I am working on it!</b></p></small></h2>
 
+        
     <%= form_for(resource, as: resource_name, url: user_registration_path()) do |f| %>
       <%= devise_error_messages! %>
 
