--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
 
-<nav class="topbar navbar-default">
+<nav class="topbar navbar-primary">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" </a>
+      <a class="navbar-brand" <%= link_to(image_tag("jhead.png", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
     </div>
     <div class="navbar-right" id="bs-example-navbar-collapse-2">
       <% if user_signed_in? %>
