change_known_error_message

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <table>
   <tr>
-    <h2>Sign up! <small><p><b>ERROR ALERT! - Refresh page before entering data or the Sign Up button won't work. I am working on it!</b></p></small></h2>
+    <h2>Sign up!</h2>
 
         
     <%= form_for(resource, as: resource_name, url: user_registration_path()) do |f| %>
