--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,7 +7,7 @@
 <%= @players %>
   
   <% @teams.each do |team| %>
-    <h2> <%= link_to(team.team_name, "/team/#{team.id}") %> Total: <%= @team_score %> </h2>
+    <h2> <%= link_to(team.team_name, "/team/#{team.id}") %> Total: <%= team.score %> </h2>
   <% end %>
 </div>
 <hr>
@@ -26,7 +26,7 @@
        <%= link_to(team.team_name, "/team/#{team.id}") %>
      </td>
      <td>
-       <%= @team_score%> 
+       <%= team.score%> 
     </td>
    </tr>
  </tbody>
