--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,19 +2,26 @@
 <nav class="topbar navbar-primary">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand" <%= link_to(image_tag("jhead.png", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
-    </div>
-    <div class="navbar-right" id="bs-example-navbar-collapse-2">
-      <% if user_signed_in? %>
-        <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %></div>
-    <div class="navbar-left">
+    <tr>
+      <td>
+        <div class="navbar-header">
+          <a class="navbar-brand" <%= link_to(image_tag("jhead.png", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
+
+        </div>
+      </td>
+
+      <div class="navbar-right" id="bs-example-navbar-collapse-2">
+        <% if user_signed_in? %>
+          <%= link_to "Sign out", "/users/sign_out()", method: :delete, :class => "btn btn-danger" %></div>
+      </tr>
+      <tr>
+      <div class="navbar-left">
 
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
         <%= link_to 'Teams', '/teams', :class => "btn btn-primary" %>
         
-      <% end %>
-     </div>
+        <% end %>
+      </div>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
