--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
 
       <div class="navbar-right" id="bs-example-navbar-collapse-2">
         <% if user_signed_in? %>
-          <%= link_to "Sign out", "/users/sign_out()", method: :delete, :class => "btn btn-danger" %></div>
+          <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %></div>
       </tr>
       <tr>
       <div class="navbar-left">
