--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,24 +5,22 @@
     <tr>
       <td>
         <div class="navbar-header">
-          <a class="navbar-brand" <%= link_to(image_tag("jhead.png", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
-
+          <a class="navbar-right"  </a>
+          </tr>
         </div>
       </td>
-
+    <tr>
       <div class="navbar-right" id="bs-example-navbar-collapse-2">
         <% if user_signed_in? %>
-          <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %></div>
-      </tr>
-      <tr>
+          <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %>    
+      </div>
+    </tr>
+    <tr>
       <div class="navbar-left">
-
+      <%= link_to(image_tag("long_ball.jpg", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %>
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
         <%= link_to 'Teams', '/teams', :class => "btn btn-primary" %>
-        
         <% end %>
       </div>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
 </nav>
 
