--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -12,6 +12,8 @@
 <hr>
 
 <span class="counter pull-left" ></span>
+
+<h5>Once All Teams have been created you will see them here</h5>
 <!-- <table class="table table-hover results" >
  <thead>
    <tr>
