--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,19 +5,19 @@
     <tr>
       <td>
         <div class="navbar-header">
-          <a class="navbar-right"  </a>
+          <a class="navbar-brand"    <%= link_to(image_tag("long_ball.jpg", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
           </tr>
         </div>
       </td>
     <tr>
       <div class="navbar-right" id="bs-example-navbar-collapse-2">
         <% if user_signed_in? %>
+   
           <%= link_to "Sign out", "/users/sign_out", method: :delete, :class => "btn btn-danger" %>    
       </div>
     </tr>
     <tr>
       <div class="navbar-left">
-      <%= link_to(image_tag("long_ball.jpg", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %>
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
         <%= link_to 'Teams', '/teams', :class => "btn btn-primary" %>
         <% end %>
