--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -13,8 +13,8 @@
 
 <span class="counter pull-left" ></span>
 
-<h5>Once All Teams have been created you will see them here</h5>
-<!-- <table class="table table-hover results" >
+<h5>Once all teams have been created you will be able to view them.</h5>
+<table class="table table-hover results" >
  <thead>
    <tr>
      <th> Team Name </th>
@@ -26,7 +26,7 @@
  <tbody>
    <tr>
      <td>
-       <%= link_to(team.team_name, "/team/#{team.id}") %>
+       <%= team.team_name %>
      </td>
      <td>
      <%= User.find_by(id: team.user_id).email %>
@@ -37,7 +37,7 @@
    </tr>
  </tbody>
 <% end %>
-</table> -->
+</table>
 
 <hr>
 
