--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,5 +1,5 @@
 <h1> <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %>
-</h1>
+   <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16" </h1>
 <hr>
 
 <div>
