--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,5 +1,5 @@
 <h1> <%= link_to("Create A New Team", "/teams/new", :class => "btn btn-success") %>
-   <link rel="icon" href="demo_icon.gif" type="image/gif" sizes="16x16" </h1>
+   
 <hr>
 
 <div>
@@ -32,7 +32,7 @@
      <%= User.find_by(id: team.user_id).email %>
      </td>
      <td>
-       <%= team.score %>
+    <!--    <%= team.player_1_data[0].to_i + team.player_2_data[0].to_i +  team.player_3_data[0].to_i + team.player_4_data[0].to_i + team.player_5_data[0].to_i + team.player_6_data[0].to_i + team.player_7_data[0].to_i + team.player_8_data[0].to_i + team.player_9_data[0].to_i %> -->
     </td>
    </tr>
  </tbody>
