--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -13,7 +13,7 @@
 
 <span class="counter pull-left" ></span>
 
-<h5>Once all teams have been created you will be able to view them.</h5>
+<h5>Click A Team Name To See It's Players</h5>
 <table class="table table-hover results" >
  <thead>
    <tr>
@@ -26,13 +26,13 @@
  <tbody>
    <tr>
      <td>
-       <%= team.team_name %>
+       <%= link_to(team.team_name, "/team/#{team.id}", :class => "btn btn-primary") %>
      </td>
      <td>
      <%= User.find_by(id: team.user_id).email %>
      </td>
      <td>
-<!--      <%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %> -->
+<%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %>
     </td>
    </tr>
  </tbody>
