--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -22,7 +22,7 @@
      <th> Score </th>
    </tr>
  </thead>
- <% @all_teams.order(team_name: :desc).each do |team| %>
+ <% @all_teams.order(score: :desc).each do |team| %>
  <tbody>
    <tr>
      <td>
@@ -32,7 +32,7 @@
      <%= User.find_by(id: team.user_id).email %>
      </td>
      <td>
-<%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %>
+       <%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %>
     </td>
    </tr>
  </tbody>
