--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -13,7 +13,8 @@
 
 <span class="counter pull-left" ></span>
 
-<h5>Click A Team Name To See It's Players</h5>
+<h3>Click A Team Name To See It's Players</h3>
+<h5> - This should be ordered by score. I am working on it! - </h5>
 <table class="table table-hover results" >
  <thead>
    <tr>
