minor_style_change

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -13,7 +13,8 @@
 
 <span class="counter pull-left" ></span>
 
-<h3>Click A Team Name To See It's Players</h3>
+<h3>Overall Standings</h3>
+<h5> - Click A Team Name To See It's Players - </h5>
 <table class="table table-hover results" >
  <thead>
    <tr>
