--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -18,14 +18,19 @@
 <table class="table table-hover results" >
  <thead>
    <tr>
+     <th> Rank </th>
      <th> Team Name </th>
      <th> Coach </th>
      <th> Score </th>
    </tr>
  </thead>
+ <% @team_count = 1 %>
  <% @all_teams.order(score: :desc).each do |team| %>
  <tbody>
    <tr>
+     <td>
+      <%= @team_count %>x
+     </td>
      <td>
        <%= link_to(team.team_name, "/team/#{team.id}", :class => "btn btn-primary") %>
      </td>
@@ -37,6 +42,7 @@
     </td>
    </tr>
  </tbody>
+ <% @team_count += 1 %>
 <% end %>
 </table>
 
