--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -29,7 +29,7 @@
  <tbody>
    <tr>
      <td>
-      <%= @team_count %>x
+      <%= @team_count %>
      </td>
      <td>
        <%= link_to(team.team_name, "/team/#{team.id}", :class => "btn btn-primary") %>
