fixed_order_for_real

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -25,7 +25,7 @@
    </tr>
  </thead>
  <% @team_count = 1 %>
- <% @all_teams.order(score: :desc).each do |team| %>
+ <% @all_teams.order(score: :home_runs_2017).each do |team| %>
  <tbody>
    <tr>
      <td>
