--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -15,7 +15,7 @@
 
 <h3>Overall Standings</h3>
 <h5> - Click A Team Name To See It's Players - </h5>
-<table class="table table-hover results" >
+<table class="table table-condensed" >
  <thead>
    <tr>
      <th> Rank </th>
