--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div>
-<table class="table table-hover results">
+<table class="table ttable-condensed">
   <thead>
     <tr>
       <th>Name</th>
