added_twitter_feed_for_dinger_tracker

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <td>
         <div class="navbar-header">
-          <a class="navbar-brand"    <%= link_to(image_tag("long_ball.jpg", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
+          <a class="navbar-brand"    <%= link_to(image_tag("home-run-baseball.jpg", size: "50x50", :alt => "logo", :class => "img-logo"), "/teams") %> </a>
           </tr>
         </div>
       </td>
@@ -20,6 +20,7 @@
       <div class="navbar-left">
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
         <%= link_to 'Teams', '/teams', :class => "btn btn-primary" %>
+        <%= link_to 'Live Updates', '/live_updates', :class => "btn btn-primary" %>
         <% end %>
       </div>
 </nav>
