--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -3,6 +3,8 @@
 <hr>
 Last Update: Apr. 17 10:00 AM.
 
+
+<%= File.mtime("/home/user/path/file.rb") %>
 <div>
 
   <% @teams.order(score: :desc).each do |team| %>
