--- a/app/views/live_updates/index.html.erb
+++ b/app/views/live_updates/index.html.erb
@@ -1,6 +1,6 @@
 <hr>
 
 <div >
-<a height="800px" width="600px" class="twitter-timeline" href="https://twitter.com/DingerTracker">Tweets by DingerTracker</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<a height="800px" width="600px" class="twitter-timeline" href="https://twitter.com/DingerTracker">Tweets by @DingerTracker</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </div>
