--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,7 +1,7 @@
 
    
 <hr>
-Last Update: May 25 3:40 AM
+Last Update: May 26 7:36 AM
 
 
 <div>
@@ -47,6 +47,10 @@ Last Update: May 25 3:40 AM
  <% @team_count += 1 %>
 <% end %>
 </table>
+
+
+<%= @team_count %>
+
 
 <hr>
 
