--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,14 +1,17 @@
 
    
 <hr>
-Last Update: June 01 5:09 AM
+Last Update: June 02 3:00 AM
 
 
 <div>
 
-  <% @teams.order(score: :desc).each do |team| %>
+  <% @teams.each do |team| %>
     <h2> <%= link_to(team.team_name, "/team/#{team.id}") %> Total: <%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %> </h2>
+    <% @teams.order(score: :desc) %>
+
   <% end %>
+
 </div>
 
 <hr>
