--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,6 +21,7 @@
         <%= link_to 'Players', '/players', :class => "btn btn-primary" %>
         <%= link_to 'Teams', '/teams', :class => "btn btn-primary" %>
         <%= link_to 'Live Updates', '/live_updates', :class => "btn btn-primary" %>
+        <%= link_to 'All-Star Standings', '/allstar', :class => "btn btn-primary" %>
         <% end %>
       </div>
 </nav>
