--- a/app/views/allstar_standings/index.html.erb
+++ b/app/views/allstar_standings/index.html.erb
@@ -8,7 +8,7 @@
 
 <hr>
 	<h1>
-		All-Star Break Standing
+		All-Star Break Standings
 	</h1>
 <h5> - Click A Team Name To See It's Players - </h5>
 <table class="table table-condensed" >
