--- a/app/views/allstar_standings/index.html.erb
+++ b/app/views/allstar_standings/index.html.erb
@@ -16,29 +16,112 @@
      <th> Rank </th>
      <th> Team Name </th>
      <th> Score </th>
-     <th> Coach </th>
    </tr>
  </thead>
- <% @team_count = 1 %>
- <% @all_teams.order(score: :desc).each do |team| %>
+
  <tbody>
    <tr>
      <td>
-      <%= @team_count %>
+      1
      </td>
      <td>
-       <%= link_to(team.team_name, "/team/#{team.id}", :class => "btn btn-primary") %>
+      Nicks team
      </td>
      <td>
-       <%= Player.find_by(name: team.player_1).home_runs_2017 + Player.find_by(name: team.player_2).home_runs_2017 +  Player.find_by(name: team.player_3).home_runs_2017 + Player.find_by(name: team.player_4).home_runs_2017+ Player.find_by(name: team.player_5).home_runs_2017 + Player.find_by(name: team.player_6).home_runs_2017 + Player.find_by(name: team.player_7).home_runs_2017 + Player.find_by(name: team.player_8).home_runs_2017 + Player.find_by(name: team.player_9).home_runs_2017 %>
-    </td>
-     <td>
-      <%= User.find_by(id: team.user_id).email %>
+     167
      </td>
    </tr>
+   <tr>
+     <td>
+      2
+     </td>
+     <td>
+      For Shizzo my Rizzo
+     </td>
+     <td>
+     167
+     </td>
+   </tr>
+   <tr>
+     <td>
+      3
+     </td>
+     <td>
+      #1
+     </td>
+     <td>
+     151
+     </td>
+   </tr>
+   <tr>
+     <td>
+      4
+     </td>
+     <td>
+      THEDON
+     </td>
+     <td>
+     150
+     </td>
+   </tr>
+   <tr>
+     <td>
+      5
+     </td>
+     <td>
+      Schwarber? I Hardley Know Her!
+     </td>
+     <td>
+     150
+     </td>
+   </tr>
+   <tr>
+     <td>
+      6
+     </td>
+     <td>
+      Team Haley
+     </td>
+     <td>
+     149
+     </td>
+   </tr>
+   <tr>
+     <td>
+      7
+     </td>
+     <td>
+      Jamesons Liver
+     </td>
+     <td>
+     149
+     </td>
+   </tr>
+   <tr>
+     <td>
+      8
+     </td>
+     <td>
+      #2
+     </td>
+     <td>
+     139
+     </td>
+   </tr>
+   <tr>
+     <td>
+      9
+     </td>
+     <td>
+      Burnzie's Bombers
+     </td>
+     <td>
+     139
+     </td>
+   </tr>
+
  </tbody>
- <% @team_count += 1 %>
-<% end %>
+
 </table>
 
 
