--- a/app/views/allstar_standings/index.html.erb
+++ b/app/views/allstar_standings/index.html.erb
@@ -50,12 +50,45 @@
       #1
      </td>
      <td>
-     151
+     152
      </td>
    </tr>
    <tr>
      <td>
       4
+     </td>
+     <td>
+      Jamesons Liver
+     </td>
+     <td>
+     152
+     </td>
+   </tr>
+   <tr>
+     <td>
+      5
+     </td>
+     <td>
+      Team Haley
+     </td>
+     <td>
+     152
+     </td>
+   </tr>
+   <tr>
+     <td>
+      6
+     </td>
+     <td>
+      Schwarber? I Hardly Know Her!
+     </td>
+     <td>
+     151
+     </td>
+   </tr>
+   <tr>
+     <td>
+      7
      </td>
      <td>
       THEDON
@@ -66,46 +99,13 @@
    </tr>
    <tr>
      <td>
-      5
-     </td>
-     <td>
-      Schwarber? I Hardley Know Her!
-     </td>
-     <td>
-     150
-     </td>
-   </tr>
-   <tr>
-     <td>
-      6
-     </td>
-     <td>
-      Team Haley
-     </td>
-     <td>
-     149
-     </td>
-   </tr>
-   <tr>
-     <td>
-      7
-     </td>
-     <td>
-      Jamesons Liver
-     </td>
-     <td>
-     149
-     </td>
-   </tr>
-   <tr>
-     <td>
       8
      </td>
      <td>
       #2
      </td>
      <td>
-     139
+     141
      </td>
    </tr>
    <tr>
@@ -116,7 +116,7 @@
       Burnzie's Bombers
      </td>
      <td>
-     139
+     140
      </td>
    </tr>
 
