allstar_standings_styling

--- a/app/views/allstar_standings/index.html.erb
+++ b/app/views/allstar_standings/index.html.erb
@@ -10,9 +10,9 @@
 <hr>
 
 
-<table class="table table-condensed" >
+<table class="table table-inverse" >
  <thead>
-   <tr>
+   <tr class="bg-info">
      <th> Rank </th>
      <th> Team Name </th>
      <th> Score </th>
@@ -20,29 +20,29 @@
  </thead>
 
  <tbody>
-   <tr>
+   <tr class="bg-primary">
      <td>
-      1
+      <b>1</b>
      </td>
      <td>
-      Nicks team
+      <b>Nicks team</b>
      </td>
      <td>
-     167
-     </td>
-   </tr>
-   <tr>
-     <td>
-      2
-     </td>
-     <td>
-      For Shizzo my Rizzo
-     </td>
-     <td>
-     167
+     <b>167</b>
      </td>
    </tr>
-   <tr>
+   <tr class="bg-primary">
+     <td>
+      <b>2</b>
+     </td>
+     <td>
+      <b>For Shizzo my Rizzo</b>
+     </td>
+     <td>
+     <b>167</b>
+     </td>
+   </tr>
+   <tr class="bg-info">
      <td>
       3
      </td>
@@ -53,7 +53,7 @@
      152
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       4
      </td>
@@ -64,7 +64,7 @@
      152
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       5
      </td>
@@ -75,7 +75,7 @@
      152
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       6
      </td>
@@ -86,7 +86,7 @@
      151
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       7
      </td>
@@ -97,7 +97,7 @@
      150
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       8
      </td>
@@ -108,7 +108,7 @@
      141
      </td>
    </tr>
-   <tr>
+   <tr class="bg-info">
      <td>
       9
      </td>
